# myFirstBot

./:  .env  .breakpoints  .gitignore  =  README.md  alarm.py  create_words_file.py  insider-copy.py  insider.py  keep_awake.py  levelsys.py  main.py  music.py  pyproject.toml  readEmail.py  slash.py  thai_words.json  translate.py  words.json
