[tool.poetry]
name = "repl_python3_myFirstBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"
ffmpeg = "^1.4"
youtube_dl = "^2021.5.16"
flask = "^2.0.1"
PyNaCl = "^1.4.0"
"discord.py" = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
